# haste-inspector

./: .gitignore  .prettierignore  Cargo.toml  biome.json  bun.lockb  notes.txt  package.json  readme.md  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
apps/haste-inspector/: index.html  package.json  vite.config.ts
apps/haste-inspector/src/: AppBar.tsx  AppLayout.tsx  Dem.tsx  DemEntities.tsx  DemStringTables.tsx  Welcome.tsx  atoms.ts  main.tsx
apps/haste-inspector/src/lib/: DropdownMenu.tsx  Tooltip.tsx  debounce.ts  keyboard.ts
crates/haste-wasm/: Cargo.toml
crates/haste-wasm/src/: lib.rs
pkgs/haste-wasm/: haste-wasm.d.ts  haste-wasm.js  haste-wasm_bg.wasm  haste-wasm_bg.wasm.d.ts  package.json
src/: App.tsx  AppBar.tsx  Dem.tsx  DemControlBar.tsx  DemEntities.tsx  DemFilterBar.tsx  DemLayout.tsx  DemStringTables.tsx  Welcome.tsx  atoms.ts  main.css
src/lib/: Button.tsx  DropdownMenu.tsx  ScrollArea.tsx  Slider.tsx  Tooltip.tsx  formatNumber.ts  platform.ts  useElementSize.ts  useEventCallback.ts
src/lib/haste/: haste.d.ts  haste.js  haste.rs  haste_bg.wasm  haste_bg.wasm.d.ts  index.ts
