[package]
name = "haste-inspector"
version = "0.0.0"
edition = "2021"

[dependencies]
haste = { git = "https://github.com/blukai/haste.git", rev = "7cb4e452e960834f02122084978ab30216ca2a23", features = ["preserve-metadata"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
path = "src/lib/haste/haste.rs"
