[package]
name = "haste-inspector"
version = "0.0.0"
edition = "2021"

[dependencies]
haste = { git = "https://github.com/blukai/haste.git", rev = "7a2bdf91d4ebea8fa0056900c1319964855206f1", features = ["preserve-metadata"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
path = "src/lib/haste/haste.rs"
