[package]
name = "haste-inspector"
version = "0.0.0"
edition = "2021"

[dependencies]
haste = { git = "https://github.com/blukai/haste.git", rev = "66300ee4bbb60e9dbfd8c94e55498bfbe7ed555b", features = ["preserve-metadata"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
path = "src/lib/haste/haste.rs"
